Added navBar, About me sections

--- a/index.html
+++ b/index.html
@@ -1,22 +1,102 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
-  </head>
+<head>
+  <title>My Portfiolio</title>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="./css/style.css">
+</head>
   <body>
-    <h1>Hello, world!</h1>
+	<!----------Navidation------------>
+    <div id="home">
+      	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+			<ul class="navbar-nav mx-auto">
+			  <li class="nav-item active">
+				<a class="nav-link" href="#">Home </a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">About</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Service</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Contact</a>
+			  </li>
+			</ul>
+		  </div>
+		</nav>
+     <!----------Background Start------------>
+		<div class="Background">
+			<img src="back2.JPG" class="img-fluid">
+		</div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+		<div class="heading-content text-center">
+			<h5>Hello, I am</h5>
+			<h1>Diana Hanushkevych</h1>
+			<p>AND THIS IS MY WORLD</p>
+		</div>
+	 <!----------Background End------------>
+	</div>
+	<!----------About------------>		  
+
+	<div id="about" class="container mt-3 pd-5">
+		<div class="post-heading text-center">
+			<h3 class="display-4 font-weight-bold">About Me</h3>
+			<hr class="w-50 mx-auto pb-5">
+		</div>
+		<div class="row">
+			<div class="col-lg-6 col-md-6 col-12">
+				<img src="back2.JPG" class="img-fluid">
+			</div>
+
+			<div class="col-lg-6 col-md-6 col-12">
+				<h2>Wanna Know Me?</h2>
+				<hr>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					 Cupiditate nulla porro molestias facere, eaque iure consectetur
+					  aliquid corporis enim iusto accusantium laborum? Quam odit,
+						   m ducimus obcaecati explicabo 
+					   sit quaerat deserunt odio unde repudia
+					adipisci in rem fugiat debitis quaerat? Ut quam eius harum nisi aperia! Non?
+				</p>
+
+				<button class="btn w-50">
+					<a href="#">Know More</a>
+				</button>
+			</div>
+		</div>
+	</div>
+    <!----------Service------------>
+
+	<div id="service" class="container mt-3 pd-5">
+		<div class="post-heading text-center">
+			<h3 class="display-4 font-weight-bold">Service</h3>
+			<hr class="w-50 mx-auto pb-5">
+		</div>
+
+		<div class="row">
+			<div class="col-lg-4 col-md-6 col-12 pb-5">
+
+			</div>
+		</div>
+
+
+	</div>
+	<!----------Contact------------>
+
+	<div id="contact" class="">
+
+	</div>
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
