--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	</div>
     <!----------Service------------>
 
-	<div id="service" class="container mt-3 pd-5">
+	<div id="service" class="container mt-3 mb-5">
 		<div class="post-heading text-center">
 			<h3 class="display-4 font-weight-bold">Service</h3>
 			<hr class="w-50 mx-auto pb-5">
@@ -84,13 +84,117 @@
 
 		<div class="row">
 			<div class="col-lg-4 col-md-6 col-12 pb-5">
-
+				<div class="card" style="width: 18rem;">
+					<img src="service1.PNG" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <h5 class="card-title">Card title</h5>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					  <a href="#" class="btn btn-dark">Live Preview</a>
+					</div>
+				  </div>
 			</div>
+
+			<div class="col-lg-4 col-md-6 col-12 pb-5">
+				<div class="card" style="width: 18rem;">
+					<img src="service2.PNG" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <h5 class="card-title">Card title</h5>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					  <a href="#" class="btn btn-dark">Live Preview</a>
+					</div>
+				  </div>
+			</div>
+
+			<div class="col-lg-4 col-md-6 col-12 pb-5">
+				<div class="card" style="width: 18rem;">
+					<img src="service3.PNG" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <h5 class="card-title">Card title</h5>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					  <a href="#" class="btn btn-dark">Live Preview</a>
+					</div>
+				  </div>
+			</div>
+
+			<div class="col-lg-4 col-md-6 col-12 pb-5">
+				<div class="card" style="width: 18rem;">
+					<img src="service4.PNG" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <h5 class="card-title">Card title</h5>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					  <a href="#" class="btn btn-dark">Live Preview</a>
+					</div>
+				  </div>
+			</div>
+
+			<div class="col-lg-4 col-md-6 col-12 pb-5">
+				<div class="card" style="width: 18rem;">
+					<img src="service5.PNG" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <h5 class="card-title">Card title</h5>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					  <a href="#" class="btn btn-dark">Live Preview</a>
+					</div>
+				  </div>
+			</div>
+
+			<div class="col-lg-4 col-md-6 col-12 pb-5">
+				<div class="card" style="width: 18rem;">
+					<img src="service6.PNG" class="card-img-top" alt="...">
+					<div class="card-body">
+					  <h5 class="card-title">Card title</h5>
+					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					  <a href="#" class="btn btn-dark">Live Preview</a>
+					</div>
+				  </div>
+			</div>
+
+			<button class="button w-50 mx-auto">
+				<a href="#">Know More</a>
+			</button>
+
 		</div>
 
 
 	</div>
+
+	<!----------Newsletter Start------------>
+
+	<section class="sec1 container-fluid mt-5 pb-5">
+		<h2 class="mt-5">Newsletter</h2>
+		<p>Subscribe to my newsletter to receive my latest news.</p>
+		<form class="form-inline mt-2" action="/action_page.php">
+			  <input type="email" class="form-control" placeholder="Enter Email" id="email">
+			<button type="submit" class="btn btn-dark ml-2">Subscribe</button>
+		  </form>
+	</section>
+
+	<!----------Newsletter End------------>
+
 	<!----------Contact------------>
+
+	<div id="contact" class="w-50 mx-auto mt-3 mb-5">
+		<div class="post-heading text-center">
+			<h3 class="display-4 font-weight-bold">Contact Us</h3>
+			<hr class="w-50 mx-auto pb-5">
+		</div>
+		<form action="/action_page.php">
+			<div class="form-group">
+			  <label for="email">Full Name:</label>
+			  <input type="text" class="form-control" id="email">
+			</div>
+			<div class="form-group">
+				<label for="email">Email address:</label>
+				<input type="email" class="form-control" id="email">
+			  </div>
+			<div class="form-group">
+				<label for="email">Your Message:</label>
+				<textarea class="form-control"></textarea>
+			</div>
+			<button type="submit" class="btn btn-dark">Sent</button>
+		  </form>
+
+	</div>
 
 	<div id="contact" class="">
 
