--- a/index.html
+++ b/index.html
@@ -159,7 +159,50 @@
 
 	</div>
 
-	<!----------Newsletter Start------------>
+ <!----------Animation Box------------>
+
+ <div id="service" class="container mt-3 mb-5">
+	<div class="post-heading text-center">
+		<h3 class="display-4 font-weight-bold">Service</h3>
+		<hr class="w-50 mx-auto pb-5">
+	</div>
+
+	<div class="row">
+		<div class="box">
+			<div class="box-img">
+				<img src="mafia2.jpg">
+			</div>
+		<div class="box-content">
+			<h3>GAME</h3>
+			<p>Mafia</p>
+		</div>
+		</div>
+
+		<div class="box">
+			<div class="box-img">
+				<img src="friends2.jpg">
+			</div>
+		<div class="box-content">
+			<h3>TV SHOW</h3>
+			<p>"Friends"</p>
+		</div>
+		</div>
+
+		<div class="box">
+			<div class="box-img">
+				<img src="roses.jpg">
+			</div>
+		<div class="box-content">
+			<h3>FLOWER</h3>
+			<p>Red Rose</p>
+		</div>
+		</div>
+	</div>
+
+
+</div>
+
+<!----------Newsletter Start------------>
 
 		<section class="sec1 container-fluid mt-5 pb-5">
 			<h2 class="mt-5">Newsletter</h2>
@@ -200,7 +243,7 @@
 
 
 	<!------------Footer-------------------->
-<!-- Footer -->
+	<!-- Footer -->
 	<div class="container-fluid">
 		<footer class="page-footer font-small blue-grey lighten-5">
 
@@ -323,7 +366,7 @@
 				<p>
 					<i class="fas fa-envelope mr-3"></i> info@example.com</p>
 				<p>
-					<i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+					<i class="fas fa-phone mr-3"></i> + 380 67 32 81 34</p>
 				<p>
 					<i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
 		
