--- a/index.html
+++ b/index.html
@@ -69,9 +69,28 @@
 					adipisci in rem fugiat debitis quaerat? Ut quam eius harum nisi aperia! Non?
 				</p>
 
-				<button class="btn w-50">
+				<button class="btn w-50" data-toggle="modal" data-target="#mymodal">
 					<a href="#">Know More</a>
 				</button>
+				<div class="modal" tabindex="-1" role="dialog" id="mymodal">
+					<div class="modal-dialog" role="document">
+					  <div class="modal-content">
+						<div class="modal-header">
+						  <h5 class="modal-title">Wanna Know More?</h5>
+						  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						  </button>
+						</div>
+						<div class="modal-body">
+						  <p>You are definitely not that close to me yet.</p>
+						  <p>Later.</p>
+						</div>
+						<div class="modal-footer">
+						  <button type="button" class="btn btn-secondary" data-dismiss="modal">Okay</button>
+						</div>
+					  </div>
+					</div>
+				  </div>
 			</div>
 		</div>
 	</div>
@@ -84,82 +103,40 @@
 		</div>
 
 		<div class="row">
-			<div class="col-lg-4 col-md-6 col-12 pb-5">
-				<div class="card" style="width: 18rem;">
-					<img src="service1.PNG" class="card-img-top" alt="...">
-					<div class="card-body">
-					  <h5 class="card-title">Card title</h5>
-					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					  <a href="#" class="btn btn-dark">Live Preview</a>
+			<section class="section-2 container-fluid p-0">
+				<div class="cover">
+				  <div class="overlay"></div>
+				  <div class="content text-center">
+					<h1>Some Features That Made Us Unique</h1>
+					<p>
+					  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, eum?
+					</p>
+				  </div>
+				</div>
+				<div class="container-fluid text-center">
+				  <div class="numbers d-flex flex-md-row flex-wrap justify-content-center">
+					<div class="rect">
+					  <h1>2345</h1>
+					  <p>Happy Client</p>
+					</div>
+					<div class="rect">
+					  <h1>6784</h1>
+					  <p>Cups Coffee</p>
+					</div>
+					<div class="rect">
+					  <h1>1056</h1>
+					  <p>Tickets Submitted</p>
+					</div>
+					<div class="rect">
+					  <h1>9152</h1>
+					  <p>Total Projects</p>
 					</div>
 				  </div>
-			</div>
-
-			<div class="col-lg-4 col-md-6 col-12 pb-5">
-				<div class="card" style="width: 18rem;">
-					<img src="service2.PNG" class="card-img-top" alt="...">
-					<div class="card-body">
-					  <h5 class="card-title">Card title</h5>
-					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					  <a href="#" class="btn btn-dark">Live Preview</a>
-					</div>
-				  </div>
-			</div>
-
-			<div class="col-lg-4 col-md-6 col-12 pb-5">
-				<div class="card" style="width: 18rem;">
-					<img src="service3.PNG" class="card-img-top" alt="...">
-					<div class="card-body">
-					  <h5 class="card-title">Card title</h5>
-					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					  <a href="#" class="btn btn-dark">Live Preview</a>
-					</div>
-				  </div>
-			</div>
-
-			<div class="col-lg-4 col-md-6 col-12 pb-5">
-				<div class="card" style="width: 18rem;">
-					<img src="service4.PNG" class="card-img-top" alt="...">
-					<div class="card-body">
-					  <h5 class="card-title">Card title</h5>
-					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					  <a href="#" class="btn btn-dark">Live Preview</a>
-					</div>
-				  </div>
-			</div>
-
-			<div class="col-lg-4 col-md-6 col-12 pb-5">
-				<div class="card" style="width: 18rem;">
-					<img src="service5.PNG" class="card-img-top" alt="...">
-					<div class="card-body">
-					  <h5 class="card-title">Card title</h5>
-					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					  <a href="#" class="btn btn-dark">Live Preview</a>
-					</div>
-				  </div>
-			</div>
-
-			<div class="col-lg-4 col-md-6 col-12 pb-5">
-				<div class="card" style="width: 18rem;">
-					<img src="service6.PNG" class="card-img-top" alt="...">
-					<div class="card-body">
-					  <h5 class="card-title">Card title</h5>
-					  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					  <a href="#" class="btn btn-dark">Live Preview</a>
-					</div>
-				  </div>
-			</div>
-
-			<button class="button w-50 mx-auto">
-				<a href="#">Know More</a>
-			</button>
-
+				</div>
+			</section>
 		</div>
-
-
 	</div>
-
- <!----------Animation Box------------>
+	<!----------Animation Box------------>
 
  <div id="service" class="container mt-3 mb-5">
 	<div class="post-heading text-center">
@@ -203,15 +180,16 @@
 </div>
 
 <!----------Newsletter Start------------>
-
-		<section class="sec1 container-fluid mt-5 pb-5">
+	<div id="newsletter">
+			<section class="sec1 container-fluid mt-5 pb-5">
 			<h2 class="mt-5">Newsletter</h2>
 			<p>Subscribe to my newsletter to receive my latest news.</p>
-			<form class="form-inline mt-2" action="/action_page.php">
+			<form class="form-inline mt-2">
 				<input type="email" class="form-control" placeholder="Enter Email" id="email">
-				<button type="submit" class="btn btn-dark ml-2">Subscribe</button>
+				<button type="submit" onclick="alert('Okay')" class="btn btn-dark ml-2">Subscribe</button>
 			</form>
 		</section>
+	</div>
 
 	<!----------Newsletter End------------>
 
@@ -222,7 +200,7 @@
 			<h3 class="display-4 font-weight-bold">Contact Us</h3>
 			<hr class="w-50 mx-auto pb-5">
 		</div>
-		<form action="/action_page.php">
+		<form>
 			<div class="form-group">
 			  <label for="email">Full Name:</label>
 			  <input type="text" class="form-control" id="email">
@@ -235,7 +213,7 @@
 				<label for="email">Your Message:</label>
 				<textarea class="form-control"></textarea>
 			</div>
-			<button type="submit" class="btn btn-dark">Sent</button>
+			<button type="submit" onclick="alert('How are you doing?')" class="btn btn-dark">Sent</button>
 		  </form>
 
 	</div>
@@ -302,7 +280,7 @@
 				<div class="col-md-3 col-lg-4 col-xl-3 mb-4">
 		
 				<!-- Content -->
-				<h6 class="text-uppercase font-weight-bold">Company name</h6>
+				<h6 class="text-uppercase font-weight-bold">Maria-Diana</h6>
 				<hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 				<p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
 					consectetur
@@ -315,21 +293,8 @@
 				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
 		
 				<!-- Links -->
-				<h6 class="text-uppercase font-weight-bold">Products</h6>
+				<h6 class="text-uppercase font-weight-bold">Hanushkevych</h6>
 				<hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-				<p>
-					<a class="dark-grey-text" href="#!">MDBootstrap</a>
-				</p>
-				<p>
-					<a class="dark-grey-text" href="#!">MDWordPress</a>
-				</p>
-				<p>
-					<a class="dark-grey-text" href="#!">BrandFlow</a>
-				</p>
-				<p>
-					<a class="dark-grey-text" href="#!">Bootstrap Angular</a>
-				</p>
-		
 				</div>
 				<!-- Grid column -->
 		
@@ -340,16 +305,16 @@
 				<h6 class="text-uppercase font-weight-bold">Useful links</h6>
 				<hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 				<p>
-					<a class="dark-grey-text" href="#!">Your Account</a>
+					<a class="dark-grey-text" href="#about">About Me</a>
 				</p>
 				<p>
-					<a class="dark-grey-text" href="#!">Become an Affiliate</a>
+					<a class="dark-grey-text" href="#service">Service</a>
 				</p>
 				<p>
-					<a class="dark-grey-text" href="#!">Shipping Rates</a>
+					<a class="dark-grey-text" href="#newsletter">Newsletter</a>
 				</p>
 				<p>
-					<a class="dark-grey-text" href="#!">Help</a>
+					<a class="dark-grey-text" href="#contact">Contact</a>
 				</p>
 		
 				</div>
@@ -362,13 +327,13 @@
 				<h6 class="text-uppercase font-weight-bold">Contact</h6>
 				<hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
 				<p>
-					<i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+					<i class="fas fa-home mr-3"></i> Lviv/Medovoi Pechery, 39</p>
 				<p>
-					<i class="fas fa-envelope mr-3"></i> info@example.com</p>
+					<i class="fas fa-envelope mr-3"></i>dganushkeevych@gmail.com</p>
 				<p>
 					<i class="fas fa-phone mr-3"></i> + 380 67 32 81 34</p>
 				<p>
-					<i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+					<i class="fab fa-instagram mr-3"></i>ganushkevychka</p>
 		
 				</div>
 				<!-- Grid column -->
@@ -390,9 +355,9 @@
 	<!-- Footer -->
 
 	<!-------------Footer End----------------------->
-
-   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="/./js/main.js"></script>
   </body>
 </html>
