--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 		
 			<!-- Copyright -->
 			<div class="footer-copyright text-center text-black-50 py-3">© 2020 Copyright:
-			<a class="dark-grey-text" href="https://mdbootstrap.com/">Diana Hanushkevych</a>
+			<a class="dark-grey-text" href="#home">Diana Hanushkevych</a>
 			</div>
 			<!-- Copyright -->
 		
@@ -358,6 +358,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<script src="/./js/main.js"></script>
+	<script src="/js/main.js"></script>
   </body>
 </html>
