--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 				<a class="nav-link" href="#service">Service</a>
 			  </li>
 			  <li class="nav-item">
+				<a class="nav-link" href="#favorites">Favorites</a>
+			  </li>
+			  <li class="nav-item">
 				<a class="nav-link" href="#contact">Contact</a>
 			  </li>
 			</ul>
@@ -61,12 +64,14 @@
 			<div class="col-lg-6 col-md-6 col-12">
 				<h2>Wanna Know Me?</h2>
 				<hr>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-					 Cupiditate nulla porro molestias facere, eaque iure consectetur
-					  aliquid corporis enim iusto accusantium laborum? Quam odit,
-						   m ducimus obcaecati explicabo 
-					   sit quaerat deserunt odio unde repudia
-					adipisci in rem fugiat debitis quaerat? Ut quam eius harum nisi aperia! Non?
+				<p>
+					So. My Name is Diana and I am 19 years old.
+					 I am the 3-rd year student and I'm afraid of being an adult. 
+					 I like watching TV-shows in English (with subtitles still) to improve my language. 
+					 I believe people are the best thing ever. 
+					 That's why I like to communicate with different human beings.
+					 Everyone is an individual. So am I. Here you can see what is in my mind.
+					  A litle part of it. Enjoy yourself!
 				</p>
 
 				<button class="btn w-50" data-toggle="modal" data-target="#mymodal">
@@ -107,29 +112,29 @@
 				<div class="cover">
 				  <div class="overlay"></div>
 				  <div class="content text-center">
-					<h1>Some Features That Made Us Unique</h1>
+					<h1>Some Features That Made Me Unique</h1>
 					<p>
-					  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, eum?
+					   And what can YOU tell me about yourself? I'm waiting for your answer!
 					</p>
 				  </div>
 				</div>
 				<div class="container-fluid text-center">
 				  <div class="numbers d-flex flex-md-row flex-wrap justify-content-center">
 					<div class="rect">
-					  <h1>2345</h1>
-					  <p>Happy Client</p>
+					  <h1>8345</h1>
+					  <p>Happy People</p>
 					</div>
 					<div class="rect">
-					  <h1>6784</h1>
-					  <p>Cups Coffee</p>
+					  <h1>1784</h1>
+					  <p>Cups Water</p>
 					</div>
 					<div class="rect">
-					  <h1>1056</h1>
-					  <p>Tickets Submitted</p>
+					  <h1>7856</h1>
+					  <p>Series Watched</p>
 					</div>
 					<div class="rect">
 					  <h1>9152</h1>
-					  <p>Total Projects</p>
+					  <p>Kilograms Eaten</p>
 					</div>
 				  </div>
 				</div>
@@ -138,9 +143,9 @@
 	</div>
 	<!----------Animation Box------------>
 
- <div id="service" class="container mt-3 mb-5">
+    <div id="favorites" class="container mt-3 mb-5">
 	<div class="post-heading text-center">
-		<h3 class="display-4 font-weight-bold">Service</h3>
+		<h3 class="display-4 font-weight-bold">Favorites</h3>
 		<hr class="w-50 mx-auto pb-5">
 	</div>
 
@@ -197,7 +202,7 @@
 
 	<div id="contact" class="w-50 mx-auto mt-5 mb-5">
 		<div class="post-heading text-center">
-			<h3 class="display-4 font-weight-bold">Contact Us</h3>
+			<h3 class="display-4 font-weight-bold">Contact Me</h3>
 			<hr class="w-50 mx-auto pb-5">
 		</div>
 		<form>
@@ -221,51 +226,38 @@
 
 
 	<!------------Footer-------------------->
-	<!-- Footer -->
 	<div class="container-fluid">
 		<footer class="page-footer font-small blue-grey lighten-5">
 
 			<div style="background-color: #21d192;">
 			<div class="container">
 		
-				<!-- Grid row-->
 				<div class="row py-4 d-flex align-items-center">
 		
-				<!-- Grid column -->
 				<div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-					<h6 class="mb-0">Get connected with us on social networks!</h6>
+					<h6 class="mb-0">Get connected with me on social networks!</h6>
 				</div>
-				<!-- Grid column -->
 		
-				<!-- Grid column -->
 				<div class="col-md-6 col-lg-7 text-center text-md-right">
 		
-					<!-- Facebook -->
 					<a class="fb-ic" href="https://www.facebook.com/diana.hanushkevych.1">
 					<i class="fab fa-facebook-f white-text mr-4"> </i>
 					</a>
-					<!-- Twitter -->
 					<a class="tw-ic" href="https://twitter.com/">
 					<i class="fab fa-twitter white-text mr-4"> </i>
 					</a>
-					<!-- Google +-->
 					<a class="gplus-ic" href="https://github.com/dganushkeevych">
 					<i class="fab fa-github white-text mr-4"> </i>
 					</a>
-					<!--Linkedin -->
 					<a class="li-ic" href="https://www.linkedin.com/in/diana-hanushkevych-87aa07194/">
 					<i class="fab fa-linkedin-in white-text mr-4"> </i>
 					</a>
-					<!--Instagram-->
 					<a class="ins-ic" href="https://www.instagram.com/ganushkevychka/">
 					<i class="fab fa-instagram white-text"> </i>
 					</a>
 		
 				</div>
-				<!-- Grid column -->
-		
 				</div>
-				<!-- Grid row-->
 		
 			</div>
 			</div>
@@ -273,32 +265,24 @@
 			<!-- Footer Links -->
 			<div class="container text-center text-md-left mt-5">
 		
-			<!-- Grid row -->
 			<div class="row mt-3 dark-grey-text">
 		
-				<!-- Grid column -->
 				<div class="col-md-3 col-lg-4 col-xl-3 mb-4">
 		
-				<!-- Content -->
 				<h6 class="text-uppercase font-weight-bold">Maria-Diana</h6>
 				<hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-				<p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-					consectetur
-					adipisicing elit.</p>
+				<p>Thank you for visiting this page.</p>
+					<p>I appriciate it.</p>
 		
 				</div>
-				<!-- Grid column -->
-		
-				<!-- Grid column -->
+
 				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-		
-				<!-- Links -->
 				<h6 class="text-uppercase font-weight-bold">Hanushkevych</h6>
 				<hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+				<p>Good bye. See you.</p>
+
 				</div>
-				<!-- Grid column -->
-		
-				<!-- Grid column -->
+
 				<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
 		
 				<!-- Links -->
@@ -318,9 +302,7 @@
 				</p>
 		
 				</div>
-				<!-- Grid column -->
 		
-				<!-- Grid column -->
 				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
 		
 				<!-- Links -->
@@ -336,14 +318,9 @@
 					<i class="fab fa-instagram mr-3"></i>ganushkevychka</p>
 		
 				</div>
-				<!-- Grid column -->
 		
+			</div>		
 			</div>
-			<!-- Grid row -->
-		
-			</div>
-			<!-- Footer Links -->
-		
 			<!-- Copyright -->
 			<div class="footer-copyright text-center text-black-50 py-3">© 2020 Copyright:
 			<a class="dark-grey-text" href="#home">Diana Hanushkevych</a>
@@ -352,7 +329,7 @@
 		
 		</footer>
 	</div>
-	<!-- Footer -->
+
 
 	<!-------------Footer End----------------------->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
