--- a/index.html
+++ b/index.html
@@ -58,7 +58,30 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-12 pb-4">
-				<img src="back2.JPG" class="img-fluid">
+
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner">
+					  <div class="carousel-item active">
+						<img class="d-block w-100" src="1.JPG" alt="First slide">
+					  </div>
+					  <div class="carousel-item">
+						<img class="d-block w-100" src="2.JPG" alt="Second slide">
+					  </div>
+					  <div class="carousel-item">
+						<img class="d-block w-100" src="3.JPG" alt="Third slide">
+					  </div>
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+					  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					  <span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+					  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					  <span class="sr-only">Next</span>
+					</a>
+				  </div>
+
+				<!--<img src="back2.JPG" class="img-fluid">-->	
 			</div>
 
 			<div class="col-lg-6 col-md-6 col-12">
@@ -192,23 +215,21 @@
 			<form class="form-inline mt-2">
 				<input type="email" class="form-control" placeholder="Enter Email" id="email">
 				<div id="btn" class="noselect" data-toggle="modal" data-target="#mysecondmodal">Subscribe</div>
-				<!--<button type="submit" onclick="alert('Okay')" class="btn btn-dark ml-2">Subscribe</button> -->
 
-				<div class="modal fade" id="mysecondmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+				<div class="modal fade" id="mysecondmodal" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle" aria-hidden="true">
 					<div class="modal-dialog modal-dialog-centered" role="document">
 					  <div class="modal-content">
 						<div class="modal-header">
-						  <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+						  <h5 class="modal-title" id="ModalLongTitle">Success</h5>
 						  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						  </button>
 						</div>
 						<div class="modal-body">
-						  ...
+						  Heeeeey! YOU are gonna know everything about me!
 						</div>
 						<div class="modal-footer">
-						  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-						  <button type="button" class="btn btn-primary">Save changes</button>
+						  <button type="btn" class="btn btn-secondary" data-dismiss="modal">I'm happy</button>
 						</div>
 					  </div>
 					</div>
