--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</nav>
      <!----------Background Start------------>
 		<div class="Background">
-			<img src="back2.JPG" class="img-fluid">
+			<img src="/images/back2.JPG" class="img-fluid">
 		</div>
 
 		<div class="heading-content text-center">
@@ -62,13 +62,13 @@
 				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 					<div class="carousel-inner">
 					  <div class="carousel-item active">
-						<img class="d-block w-100" src="1.JPG" alt="First slide">
+						<img class="d-block w-100" src="/images/1.JPG" alt="First slide">
 					  </div>
 					  <div class="carousel-item">
-						<img class="d-block w-100" src="2.JPG" alt="Second slide">
+						<img class="d-block w-100" src="/images/2.JPG" alt="Second slide">
 					  </div>
 					  <div class="carousel-item">
-						<img class="d-block w-100" src="3.JPG" alt="Third slide">
+						<img class="d-block w-100" src="/images/3.JPG" alt="Third slide">
 					  </div>
 					</div>
 					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -175,7 +175,7 @@
 	<div class="row">
 		<div class="box">
 			<div class="box-img">
-				<img src="mafia2.jpg">
+				<img src="/images/mafia2.jpg">
 			</div>
 		<div class="box-content">
 			<h3>GAME</h3>
@@ -185,7 +185,7 @@
 
 		<div class="box">
 			<div class="box-img">
-				<img src="friends2.jpg">
+				<img src="/images/friends2.jpg">
 			</div>
 		<div class="box-content">
 			<h3>TV SHOW</h3>
@@ -195,7 +195,7 @@
 
 		<div class="box">
 			<div class="box-img">
-				<img src="roses.jpg">
+				<img src="/images/roses.jpg">
 			</div>
 		<div class="box-content">
 			<h3>FLOWER</h3>
