Added the opportunity to open my links in a new window.

--- a/index.html
+++ b/index.html
@@ -282,19 +282,19 @@
 		
 				<div class="col-md-6 col-lg-7 text-center text-md-right">
 		
-					<a class="fb-ic" href="https://www.facebook.com/diana.hanushkevych.1">
+					<a class="fb-ic" href="https://www.facebook.com/diana.hanushkevych.1" target="_blank">
 					<i class="fab fa-facebook-f white-text mr-4"> </i>
 					</a>
-					<a class="tw-ic" href="https://twitter.com/">
+					<a class="tw-ic" href="https://twitter.com/" target="_blank">
 					<i class="fab fa-twitter white-text mr-4"> </i>
 					</a>
-					<a class="gplus-ic" href="https://github.com/dganushkeevych">
+					<a class="gplus-ic" href="https://github.com/dganushkeevych" target="_blank">
 					<i class="fab fa-github white-text mr-4"> </i>
 					</a>
-					<a class="li-ic" href="https://www.linkedin.com/in/diana-hanushkevych-87aa07194/">
+					<a class="li-ic" href="https://www.linkedin.com/in/diana-hanushkevych-87aa07194/" target="_blank">
 					<i class="fab fa-linkedin-in white-text mr-4"> </i>
 					</a>
-					<a class="ins-ic" href="https://www.instagram.com/ganushkevychka/">
+					<a class="ins-ic" href="https://www.instagram.com/ganushkevychka/" target="_blank">
 					<i class="fab fa-instagram white-text"> </i>
 					</a>
 		
